--- a/index.css
+++ b/index.css
@@ -3,6 +3,9 @@
     margin: 10px;
     font-family:'Poppins' ,sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background: #080808;
     color: #fff;
@@ -72,6 +75,20 @@ nav ul li a:hover::after{
 .header-text span{
     color: #ff004f;
 }
+.header-text #heart{
+    margin-left: 40px;
+}
+#heart:hover{
+    color: red;
+    background-position: right;
+}
+.fas{
+    color: #f5000f;
+}
+.fas{
+    color: #f50057;
+    transition: .4s;
+}
 /*------about-------*/
 #about{
     padding: 80px 0;
@@ -87,7 +104,7 @@ nav ul li a:hover::after{
     flex-basis: 35%;
 }
 .about-col1 img{
-    width: 70%;
+    width: 100%;
     border-radius: 15px;
 }
 .about-col2{
@@ -140,6 +157,9 @@ nav ul li a:hover::after{
 .tab-contents.active-tab{
     display: block;
 }
+#sub-pro{
+    color: aqua;
+}
 /*-------AChievements ------*/
 .achievement-row{
     
@@ -189,6 +209,20 @@ nav ul li a:hover::after{
     color: #ff004f;
     
 }
+.sport-img{
+    width: 90%;
+    display: none;
+    transition: 1s;
+}
+.Sports:hover .sport-img{
+    display: block;
+    
+}
+/*===contacts====*/
+.social-icon a{
+    color:#fff;
+text-decoration: none;
+}
 /*------MEDIA QUERY------*/
 @media only screen and(max-width: 600px){
     .subt{
@@ -202,7 +236,8 @@ nav ul li a:hover::after{
         margin-bottom: 30px;
     }
     .about-col1 img{
-        width:100%;
+        width:200%;
+        height: 100vh;
     }
     .tab-links{
         font-size: 16px;
@@ -210,6 +245,50 @@ nav ul li a:hover::after{
     }
     .contact-left{
         flex-basis: 100%;
-        
+
     }
+}
+/*----DROPDOWN-----*/
+.dropdown{
+    display: none;
+}
+ul li:hover .dropdown{
+    display:inline-flex;
+    position: absolute;
+    margin-bottom: auto;
+    margin-left: -50px;
+
+}
+ul li:hover .dropdown ul{
+    margin-top: 15px;
+    display: block;
+    position: absolute;
+    transition: 0.5s;
+}
+/*-----Gallary------*/
+.img-row img{
+    width: 60%;
+    border-radius: 5px 5px;}
+.img-row {
+    padding: 5px;
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(500px ,1fr));
+    flex-wrap: wrap;
+    display: inline-grid;
+}
+.img-row .col{
+    float: left;
+    display: flex;
+    flex-direction:row;
+    flex-basis:30%;
+}
+.example p{
+    padding: 10px 10px;
+    margin-bottom: 10px;
+}
+.example #p{
+    position: relative;
+    left: 0%;
+    color: #f50057;
+    font-style: italic;
 }
