--- a/index.css
+++ b/index.css
@@ -1,28 +1,32 @@
-*{
-    padding:0px;
+* {
+    padding: 0px;
     margin: 10px;
-    font-family:'Poppins' ,sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
-body{
+
+body {
     background: #080808;
     color: #fff;
 }
-#head{
+
+#head {
     width: 100%;
     height: 100vh;
     background-image: url();
     background-size: cover;
     background-position: center;
 }
-.container{
-    padding:10px 10%;
+
+.container {
+    padding: 10px 10%;
 
 }
 
-nav{
+nav {
     position: relative;
     text-align: center;
     align-items: center;
@@ -32,25 +36,29 @@ nav{
     margin-top: -30px;
     margin-bottom: 60px;
 }
-nav ul li{
+
+nav ul li {
     display: inline-block;
     list-style: none;
-    margin:10px ;
-    padding:0px;
+    margin: 10px;
+    padding: 0px;
 }
- nav .head{
-    font-size:200%;
+
+nav .head {
+    font-size: 200%;
     font-weight: 600;
     margin-right: 100px;
     right: 0px;
 }
-nav ul li a{
-    color:#fff;
+
+nav ul li a {
+    color: #fff;
     text-decoration: none;
     font-size: 18px;
     position: relative;
 }
-nav ul li a::after{
+
+nav ul li a::after {
     content: '';
     width: 0%;
     height: 3px;
@@ -60,74 +68,91 @@ nav ul li a::after{
     bottom: -6px;
     transition: 0.5s;
 }
-nav ul li a:hover::after{
+
+nav ul li a:hover::after {
     width: 100%;
 }
-.header-text{
-    margin-top:1 0%;
+
+.header-text {
+    margin-top: 1 0%;
     font-size: 30px;
 
 
 }
-.header-text h1{
+
+.header-text h1 {
     font-size: 60px;
 }
-.header-text span{
+
+.header-text span {
     color: #ff004f;
 }
-.header-text #heart{
+
+.header-text #heart {
     margin-left: 40px;
 }
-#heart:hover{
+
+#heart:hover {
     color: red;
     background-position: right;
 }
-.fas{
+
+.fas {
     color: #f5000f;
 }
-.fas{
+
+.fas {
     color: #f50057;
     transition: .4s;
 }
+
 /*------about-------*/
-#about{
+#about {
     padding: 80px 0;
     color: #ababab;
     margin-top: -250px;
 }
-.row{
+
+.row {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.about-col1{
+
+.about-col1 {
     flex-basis: 35%;
 }
-.about-col1 img{
+
+.about-col1 img {
     width: 100%;
     border-radius: 15px;
 }
-.about-col2{
+
+.about-col2 {
     flex-basis: 60%;
 }
-.subt{
+
+.subt {
     font-size: 60px;
     font-weight: 600;
     color: #fff;
 }
-.tab-title{
+
+.tab-title {
     display: flex;
     margin: 20px 0 40px;
 
 }
-.tab-links{
+
+.tab-links {
     margin-right: 50px;
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
     position: relative;
 }
-.tab-links::after{
+
+.tab-links::after {
     content: ' ';
     width: 0;
     height: 3px;
@@ -137,161 +162,259 @@ nav ul li a:hover::after{
     bottom: -8px;
     transition: 0.5s;
 }
-.tab-links.active-link::after{
+
+.tab-links.active-link::after {
     width: 50%;
 
 }
-.tab-contents ul li{
+
+.tab-contents ul li {
     list-style: none;
     margin: 10px 0;
 }
-.tab-contents ul li span{
-    color:#ff004f;
+
+.tab-contents ul li span {
+    color: #ff004f;
     font-size: 14px;
     padding: 5px 5px;
     margin-left: -10px;
 }
-.tab-contents{
+
+.tab-contents {
     display: none;
 }
-.tab-contents.active-tab{
+
+.tab-contents.active-tab {
     display: block;
 }
-#sub-pro{
+
+#sub-pro {
     color: aqua;
 }
+
+#head .container h1 span {
+    color: #ff004f;
+    margin: 0px;
+}
+
 /*-------AChievements ------*/
-.achievement-row{
-    
+.achievement-row {
+
     justify-content: space-between;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
 
 
 }
-.ach-h1{
-    font-size:60px;
-    color:#fff;
+
+.ach-h1 {
+    font-size: 60px;
+    color: #fff;
     font-weight: 600;
 }
-.achievement-row span{
+
+.achievement-row span {
     color: #ff004f;
 }
-.Sports{
+
+.Sports {
     flex-basis: 35%;
 }
-.Ideathon{
+
+.Ideathon {
     flex-basis: 20%;
 }
-.business-plan{
+
+.business-plan {
     flex-basis: 25%;
 }
 
-.achievement-row div{
+.achievement-row div {
     background: #262626;
     border-radius: 4px;
     font-size: 13px;
-    transition: background 0.5s , transform 0.5s;
+    transition: background 0.5s, transform 0.5s;
 }
-.achievement-row div:hover{
+
+.achievement-row div:hover {
     background: #3d0416;
     transform: translateY(-10px);
 }
-.contact-left  p:hover{
+
+.contact-left p:hover {
     background: #3d3d3d;
     width: 100%;
-    transition: 0.5s ;
+    transition: 0.5s;
     transform: translateY(-10px);
     border-radius: 10px;
 }
-.contact-left  p a i{
+
+.contact-left p a i {
     color: #ff004f;
-    
+
 }
-.sport-img{
+
+.sport-img {
     width: 90%;
     display: none;
     transition: 1s;
 }
-.Sports:hover .sport-img{
+
+.Sports:hover .sport-img {
     display: block;
-    
+
 }
+
 /*===contacts====*/
-.social-icon a{
-    color:#fff;
-text-decoration: none;
+.social-icon a {
+    color: #fff;
+    text-decoration: none;
 }
+
+/*---css for small screen----*/
+nav .fas {
+    display: none;
+}
+
+.fas {
+    position: fixed;
+    right: 50px;
+    color: #fff;
+    top: 50px;
+    font-weight: 1000;
+}
+
 /*------MEDIA QUERY------*/
-@media only screen and(max-width: 600px){
-    .subt{
+@media only screen and (max-width : 600px) {
+    .subt {
         font-size: 40px;
     }
-    .about-col1 .about-col2{
+
+    .header-text {
+        margin-top: 100%;
+        font-size: 16px;
+
+    }
+
+    .header-text h1 {
+        font-size: 30px;
+    }
+
+    .about-col1 .about-col2 {
         flex-basis: 100%;
 
     }
-    #about {
-    padding: 80px 0;
-    color: #ababab;
-    margin-top: -300px;
-}
+
     .about-col1 {
         margin-bottom: 30px;
     }
-    .about-col1 img{
-        width:200%;
-        height: 100vh;
+
+    .about-col1 img {
+        width: 200px;
+        height: auto;
     }
-    .tab-links{
+
+
+    .tab-links {
         font-size: 16px;
         margin-right: 20px;
     }
-    .contact-left{
+
+    .contact-left {
         flex-basis: 100%;
 
     }
+
+    nav .fas {
+        display: block;
+    }
+
+    nav ul {
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        width: 200px;
+        height: 200vh;
+        padding-top: 50px;
+        right: -200px;
+        z-index: 2;
+        border-radius: 10px;
+        transition: right 0.5s;
+
+    }
+
+    nav ul li {
+        display: block;
+        margin: 25px;
+    }
+
+    nav ul .fas {
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+
+    .row .social-icon:hover {
+        display: inline-block;
+        transform: translateY(-10px);
+    }
 }
+
 /*----DROPDOWN-----*/
-.dropdown{
+.dropdown {
     display: none;
 }
-ul li:hover .dropdown{
-    display:inline-flex;
+
+ul li:hover .dropdown {
+    display: inline-flex;
     position: absolute;
     margin-bottom: auto;
     margin-left: -50px;
 
 }
-ul li:hover .dropdown ul{
+
+ul li:hover .dropdown ul {
     margin-top: 15px;
     display: block;
     position: absolute;
     transition: 0.5s;
 }
+
 /*-----Gallary------*/
-.img-row img{
-    width: 60%;
-    border-radius: 5px 5px;}
+.img-row img {
+    width: 100%;
+    border-radius: 5px 5px;
+}
+
+#about {
+    padding: 80px 0;
+    color: #ababab;
+    margin-top: -300px;
+}
+
 .img-row {
     padding: 5px;
-    display:grid;
-    grid-template-columns: repeat(auto-fit,minmax(500px ,1fr));
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     flex-wrap: wrap;
     display: inline-grid;
 }
-.img-row .col{
+
+.img-row .col {
     float: left;
     display: flex;
-    flex-direction:row;
-    flex-basis:30%;
+    flex-direction: row;
+    flex-basis: 30%;
 }
-.example p{
+
+.example p {
     padding: 10px 10px;
     margin-bottom: 10px;
 }
-.example #p{
+
+.example #p {
     position: relative;
     left: 0%;
     color: #f50057;
