--- a/index.css
+++ b/index.css
@@ -200,6 +200,7 @@ nav ul li a:hover::after {
 /*-------AChievements ------*/
 .container {
     left: 0;
+
 }
 
 .achievement-row {
@@ -208,7 +209,7 @@ nav ul li a:hover::after {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
-
+    overflow-x: auto;
 
 }
 
@@ -289,8 +290,21 @@ nav .fas {
     font-weight: 1000;
 }
 
+.achievement-row {
+    overflow-x: auto;
+}
+
+.pro .projects {
+    overflow-x: auto;
+}
+
+.projects::-webkit-scrollbar {
+    width: 0px;
+
+}
+
 /*------MEDIA QUERY------*/
-@media only screen and (max-width : 600px) {
+@media only screen and (max-width : 900px) {
     .subt {
         font-size: 40px;
     }
@@ -298,8 +312,16 @@ nav .fas {
     .header-text {
         margin-top: 100px;
         font-size: 16px;
+        width: 100%;
 
     }
+
+    #head {
+        height: 80vh;
+
+    }
+
+
 
     .header-text h1 {
         font-size: 30px;
@@ -372,6 +394,25 @@ nav .fas {
         display: inline-block;
         transform: translateY(-10px);
     }
+
+    .pro .projects {
+        display: flex;
+        flex-direction: row;
+        padding-top: 30px;
+        margin-left: -150px;
+    }
+
+    .pro .projects {
+        overflow-x: auto;
+
+    }
+
+    .projects::-webkit-scrollbar {
+        width: 0px;
+
+    }
+
+
 }
 
 /*----DROPDOWN-----*/
@@ -431,4 +472,116 @@ ul li:hover .dropdown ul {
     left: 0%;
     color: #f50057;
     font-style: italic;
+}
+
+/***********************************/
+.projects {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    gap: 2rem;
+}
+
+.projects,
+#h1 {
+    margin-left: 40px;
+
+}
+
+.projects .RPS,
+.TDL,
+.WF {
+    background-color: #262626;
+    height: 100px;
+    width: 200px;
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px;
+
+}
+
+.projects .RPS:hover,
+.TDL:hover,
+.WF:hover {
+    scale: 1.2;
+    transition: 0.5s;
+    box-shadow: 2px 5px 10px 0px #a83838;
+}
+
+.projects .forms {
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    justify-content: space-between;
+}
+
+.pro {
+    display: flex;
+    padding: 10px;
+    gap: 2rem;
+}
+
+.projects button {
+    border-bottom: 2px solid rgb(196, 152, 69);
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    background: transparent;
+    color: #fff;
+}
+
+.projects .RPS img {
+    width: 210px;
+    height: 120px;
+    background-size: cover;
+    background: transparent;
+    z-index: -10;
+    margin: auto;
+    margin-top: -10px;
+    margin-left: -10px;
+
+}
+
+.projects .RPS h2 {
+    position: absolute;
+    z-index: 10;
+
+}
+
+.projects .WF img {
+    width: 210px;
+    height: 120px;
+    background-size: cover;
+    background: transparent;
+    z-index: -10;
+    margin: auto;
+    margin-top: -10px;
+    margin-left: -10px;
+
+
+}
+
+.projects .WF h2 {
+    position: absolute;
+    z-index: 10;
+
+}
+
+.projects .TDL img {
+    width: 210px;
+    height: 120px;
+    background-size: cover;
+    background: transparent;
+    z-index: -10;
+    margin: auto;
+    margin-top: -10px;
+    margin-left: -10px;
+
+
+}
+
+.projects .TDL h2 {
+    position: absolute;
+    z-index: 10;
+
 }
